--- a/index.html
+++ b/index.html
@@ -43,16 +43,17 @@
         // ---------------------------------------------------------
         
         const firebaseConfig = {
-            apiKey: "PEGA_TU_API_KEY_AQUI",
-            authDomain: "TU_PROYECTO.firebaseapp.com",
-            projectId: "TU_PROJECT_ID",
-            storageBucket: "TU_PROYECTO.firebasestorage.app",
-            messagingSenderId: "TU_SENDER_ID",
-            appId: "TU_APP_ID"
+            apiKey: "AIzaSyDGpXkfs-CQXnq6CeOGl6AEHIUXqbDvF8U",
+            authDomain: "finanzaschat-54721.firebaseapp.com",
+            projectId: "finanzaschat-54721",
+            storageBucket: "finanzaschat-54721.firebasestorage.app",
+            messagingSenderId: "673675834438",
+            appId: "1:673675834438:web:53984c62a30e3afe484647",
+            measurementId: "G-W5P04LQSXH"
         };
         
         // Clave de Gemini (Pon la tuya aquí si la tienes)
-        const GEMINI_API_KEY = "TU_CLAVE_GEMINI_AQUI"; 
+        const GEMINI_API_KEY = "AIzaSyBsrxA4VfJT8UflwzrOeKyuDLM6ET6vmbI"; 
 
         const appId = 'default-app-id'; 
         // ---------------------------------------------------------
